--- a/FrontEnd/static/css/main.css
+++ b/FrontEnd/static/css/main.css
@@ -2700,7 +2700,7 @@ table.order-details tbody td {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color:rgba(236, 236, 236, 0.953);
+    /*background-color:rgba(236, 236, 236, 0.953);*/
     width: 50%;
     border-radius: 3%;
     margin-left: 25%;
