--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -154,7 +154,7 @@ height:auto
     padding: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
-    width: 95%;
+
 	/*margin-left: 100px;
 	margin-right: 100px;*/
 	height:auto;
@@ -491,6 +491,9 @@ margin-left:15px;
 	 z-index:0;
 
 	 }
+	 .fa-eye{
+
+	 }
 
 }
 	</style>
@@ -608,7 +611,7 @@ margin-left:15px;
 										</span>
 										<label for="password"  style="margin-bottom:-6%;">Password:</label>
 										<input type="password" id="pass" class="input-box" name="Password" required placeholder="Enter your password" style="margin-bottom:-6%;">
-										<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: absolute; right: 120px;  margin-top:5.5%; cursor: pointer;" id="ayeee"></i>
+										<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: relative; right: 12%; cursor: pointer;padding-top:14%;" id="ayeee"></i>
 
 									</div>
 									<a href="#" id="forgetPass">Forgot Password?</a>
@@ -760,7 +763,7 @@ margin-left:15px;
             <div class="input-pair" id="cp">
                 <label for="password2">Confirm Password:</label>
                 <input type="password" id="password2" class="input-box" name="password2" required placeholder="Confirm your new password">
-				<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: absolute; right: 80px; top: 236px; cursor: pointer;" id="eye"></i>
+				<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: relative; right: 12%; cursor: pointer;" id="eye"></i>
             </div>
 
 			{% if messages %}
