--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -37,6 +37,34 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script>
+		function getSecurityQuestions(email){
+			var csrftoken = getCookie('csrftoken');
+				$.ajax({
+					url: '/BackEnd/get_security_questions/',
+					method: 'POST',
+					data: { email: email },
+					beforeSend: function(xhr, settings) {
+						// Include CSRF token in headers
+						xhr.setRequestHeader("X-CSRFToken", csrftoken);
+					},
+					success: function(response) {
+						// Handle successful response
+						console.log(response);
+						if(email.length != 0){
+						//alert('not ull');
+						updateSecurityQuestions(response);}
+						//alert(response.join("\n"));
+						else if (email.length === 0){
+						//alert('null');
+						updateSecurityQuestions(null);}
+					},
+					error: function(xhr, status, error) {
+						// Handle errors
+						console.error(xhr.responseText);
+					}
+				});
+			}
+			
 		function validateCheckbox() {
 			var checkbox = document.getElementById("agree");
 			var messageSpan = document.getElementById("agreeMessage");
@@ -57,11 +85,13 @@
 		  if (!emailRegex.test(email)) {
 			messageSpan.innerHTML = 'Please enter a valid email address (such as user@example.com)';
 			messageSpan.style.visibility = 'visible';
+			getSecurityQuestions(email);
 				return false;
 			} else {
 				messageSpan.innerHTML = ""; 
 				messageSpan.style.visibility = 'hidden';
-
+				//Check what are the selected security questions for this email
+				getSecurityQuestions(email);
 			}
 	
 			return true;
@@ -110,8 +140,48 @@
 			return true;
 		}
 
+		function updateSecurityQuestions(questions) {
+			var selectElement = $('#securityQuestion');
+			selectElement.empty();
+			selectElement.append('<option selected disabled value="">Choose a security question</option>');
+			if(questions === null){
+				return;
+			}
+			var allQuestions = [
+				"What was the name of your first pet?",
+				"What was your favorite food as a child?",
+				"What was your childhood nickname?",
+				"What is your oldest cousin's first name?",
+				"What was your favorite vacation place as a child?",
+				"What was the name of your favorite show growing up?",
+				"What is the last name of your mother?",
+				"What was the name of your favorite childhood teacher?",
+				"What was the name of the first school you remember attending?",
+				"What was the name of your favorite childhood friend?"
+			];
+			allQuestions.forEach(function(question) {
+				if (!questions.includes(question)) {
+					selectElement.append('<option>' + question + '</option>');
+				}
+			});
+		}
 
-		
+		// Function to get CSRF token from cookies
+		function getCookie(name) {
+			var cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				var cookies = document.cookie.split(';');
+				for (var i = 0; i < cookies.length; i++) {
+					var cookie = cookies[i].trim();
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+
 	  </script>
 
 	<style>
@@ -630,11 +700,6 @@ select {
 	<div class="seqQselect">
 	<select id="securityQuestion" name="securityQuestion" required class="input-box"  style="width: 85%;">
 	  <option selected disabled value="">Choose a security question</option>
-	  <option>What city were you born in?</option>
-	  <option>What elementary school did you attend?</option>
-	  <option>What is the name of your favorite show growing up?</option>
-	  <option>What is the name of your favorite childhood teacher?</option>
-	  <option>What was the name of your favorite childhood friend?</option>
 	</select>
   </div>
 </div>
