deploy latest changes - signup, age estimation, login and all games

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -479,7 +479,7 @@ margin-left:15px;
                                 <h3>Assign age group reset Link Sent <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>An age group reset link has been sent to your registered email address. Please check your inbox, including your spam folder, and follow the link to reset your age group.</h5>
                                 <h7>If you haven't received an email, please ensure that you registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
-                                <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+                                <h7>Back to <a id="next-button" href="{% url 'index' %}">Home Page</a></h7>
                             </div>
                         </div>
                     </div>
@@ -495,7 +495,7 @@ margin-left:15px;
                                 <h3>A redirect link to your corresponding age group reset has been sent <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>A redirect link to your corresponding age group account has been sent to your registered email address. Please check your inbox, including your spam folder.</h5>
                                 <h7>If you haven't received an email, please ensure that you registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
-                                <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+                                <h7>Back to <a id="next-button" href="{% url 'index' %}">Home Page</a></h7>
                             </div>
                         </div>
                     </div>
@@ -511,7 +511,7 @@ margin-left:15px;
                                 <h3>Confirm Registration <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>Dear gamer, we have sent you a link to your registered email to confirm your registration. Please check your inbox, including your spam folder, and follow the link to complete your registering confirmation.</h5>
                                 <h7>If you haven't received an email, please ensure that your registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
-                                <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+                                <h7>Back to <a id="next-button" href="{% url 'index' %}">Home Page</a></h7>
                             </div>
                         </div>
                     </div>
