--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -700,7 +700,7 @@ padding: 10px;
 
 .main-menu{
 	margin-left: 20px;
-	margin top: 15px;
+	margin-top: 15px;
 	}
 
 
@@ -1251,7 +1251,7 @@ $('input[type="checkbox"]').each(function () {
 				<div class="col-lg-4 col-md-6 text-center strawberry ">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="" ><img src="" alt=""></a>
+							<img src="" alt="">
 						</div>
 						<h3></h3>
 						<form id="gameInfoForm">
@@ -1484,7 +1484,7 @@ function updateGamesContainer(data) {
             <div class="col-lg-4 col-md-6 text-center game-item" data-game-id="${game.ID}">
                 <div class="single-product-item">
                     <div class="product-image">
-                        <a href="${game.URL}"><img src="${game.Icon_URL}" alt=""></a>
+                        <img src="${game.Icon_URL}" alt="">
                     </div>
                     <h3>${game.Name}</h3>
                     <a href="#" class="cart-btn more-info-btn">More info</a>
