--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -247,6 +247,25 @@ margin-left:15px;
 	 z-index:0;
 
 	 }
+	   #popup {
+            margin: 10%;
+            padding: 5%;
+            width:auto;
+
+        }
+        #video-stream{
+       margin-left:20%;
+       margin-top:12%;
+        }
+        #take-snapshot-button{
+         margin-left:60%;
+         font-size:50%;
+
+        }
+        .popup-content{
+        margin: 10% 2%;
+        }
+
 
 }
     </style>
