--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -186,6 +186,7 @@ height:auto
     border: none;
     border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.7);
+    font-size:1.2rem;
 }
 
 .input-box:focus, #securityAnswer:focus {
@@ -223,7 +224,7 @@ select {
   appearance: none;
   -webkit-appearance: none;
   width: 86%;
-  font-size: 15px;
+  font-size: 1rem;
   background-color: rgba(255, 255, 255, 0.7);
   color: #000;
   cursor: pointer;
@@ -232,7 +233,7 @@ select {
   border: none;
   border-radius: 25px;
   font-weight: bold;
-  margin-left: -20%;
+  margin-left: -33%;
 }
 
 .custom-select::before,
@@ -494,6 +495,31 @@ margin-left:15px;
 	 .fa-eye{
 
 	 }
+	 .popup {
+  display: none;
+  position: fixed;
+  #top: 0;
+  left: 50;
+  width: 80%;
+  height: 100%;
+}
+
+.popup-content {
+padding:3%;
+  margin-top:40%;
+
+}
+select{
+margin-left:5%;}
+.input-pair input{
+margin-left:0%;
+}
+.input-box{
+ width:-webkit-fill-available;
+
+
+}
+
 
 }
 	</style>
@@ -687,7 +713,7 @@ margin-left:15px;
             </div>
             <div id="answerSpace">
                 <label for="securityAnswer">Your Answer:</label>
-                <input type="text" id="securityAnswer" name="answer" required placeholder="Enter your answer" onblur="validateAnswer(this.value)" pattern="[A-Za-z][A-Za-z0-9]*" title="The answer should not contain only numbers or any special characters" style="width: 62%;">
+                <input type="text" id="securityAnswer" name="answer" required placeholder="Enter your answer" onblur="validateAnswer(this.value)" pattern="[A-Za-z][A-Za-z0-9]*" title="The answer should not contain only numbers or any special characters">
                 <span id="answer-error" class="error-message" style="color: darkred; font-size: 90%; font-weight: 600;  display: flex; position: relative; top: 19.5%;"></span>
             </div>
             <button type="button" id="resetUser">Reset Username</button>
