--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -498,7 +498,7 @@ margin-left:15px;
 	 .popup {
   display: none;
   position: fixed;
-  #top: 0;
+  top: 0;
   left: 50;
   width: 80%;
   height: 100%;
