--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -877,6 +877,7 @@ else if (status === 'error'){
     document.getElementById('send').style.display = 'none';
     document.getElementById("instructions").style.display = "none";
     document.getElementById('errorPopUp').style.display = 'block';
+    document.getElementById("ageGroupConfirm").style.display = "none";
 }
 else if (status === 'confirm'){
     //alert('has been sent');
