--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -457,7 +457,7 @@ padding: 10px;
 
 .main-menu{
 	margin-left: 20px;
-	margin top: 15px;
+	margin-top: 15px;
 	}
 
 
@@ -775,7 +775,7 @@ $(document).ready(function() {
                 }
             }
             return cookieValue;
-        }
+        }/*
         var originalButtonText = 'Save';
 
 document.getElementById('Fname').addEventListener('input', enableButton);
@@ -829,6 +829,7 @@ function updateButton(){
     var b = document.getElementById('Ebutton');
     b.textContent = originalButtonText;
 }
+*/
 
 
 
