--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -160,7 +160,7 @@
             justify-content: space-between;
             align-items: center;
             top: -106px;
-			left: 10px;
+			left: 2.5%;
 }
 
 		option{
@@ -173,7 +173,7 @@
 			border: none;
 			border: 0.5px solid;
 			cursor: inherit;
-			width: 20%;
+			width: 17.5%;
 			cursor: pointer;
 			font-size: 16px;
 			font-weight: 600;
